Fix endpoints parameters
